--- a/Atomic_Heart.html
+++ b/Atomic_Heart.html
@@ -38,7 +38,7 @@
                 <img src = "Images/bigCover/AtomicHeart BG.jpg" class="bodyicon"></img>
                 <h1 style="margin-left: 30px; margin-top: 5px; margin-bottom: 5px;">Atomic Heart</h1>
                 <section class="gameinfo">
-                    <img src = "Images/miniCover/56297_Atomic_Heart.jpg" class="gameicon"></img>
+                    <img src = "Images/miniCover/56297_Atomic_Heart.jpg" class="gameicon"/>
                     <div class="maininfo">
                         <div class="universal">
                             <h1>Разработчик</h1>
@@ -55,10 +55,10 @@
                             <h1>21.02.2023</h1>
                         </div>
                         <div class="platformsicons">
-                            <img src="Icons/playstation-logotype.png" width="32" height="32"></img>
-                            <img src="Icons/xbox-logo.png" width="32" height="32"></img>
-                            <img src="Icons/steam.png" width="32" height="32"></img>
-                            <img src="Icons/vk.png" width="32" height="32"></img>
+                            <img src="Icons/playstation-logotype.png" width="32" height="32"/>
+                            <img src="Icons/xbox-logo.png" width="32" height="32"/>
+                            <img src="Icons/steam.png" width="32" height="32"/>
+                            <img src="Icons/vk.png" width="32" height="32"/>
                         </div>
                     </div>
                     <div class="description">
