--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="Styles/main.css" />
-    <title>SoStoGo - лучший игровой портал/</title>
+    <title>SSG - лучший игровой портал/</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
