--- a/Atomic_Heart.html
+++ b/Atomic_Heart.html
@@ -55,7 +55,7 @@
                             <h1>21.02.2023</h1>
                         </div>
                         <div class="platformsicons">
-                            <img src="Icons/playstation-logotype.png" width="32" height="32"/>
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <img src="Icons/playstation-logotype.png" width="32" height="32"/> </a>
                             <img src="Icons/xbox-logo.png" width="32" height="32"/>
                             <img src="Icons/steam.png" width="32" height="32"/>
                             <img src="Icons/vk.png" width="32" height="32"/>
