--- a/main.html
+++ b/main.html
@@ -46,9 +46,8 @@
           <div class="options">Опции</div>
         </div>
         <section class="gamelist">
-          <a href="Atomic_Heart.html">
           <div class="game">
-            <img src="Images/miniCover/56297_Atomic_Heart.jpg" />
+            <a href="Atomic_Heart.html"> <img src="Images/miniCover/56297_Atomic_Heart.jpg" /> </a>
             <div class="info">
               <h1>Atomic Heart</h1>
               <h2>Разработчк</h2>
@@ -65,7 +64,6 @@
               <div class="grade">8.6</div>
             </div>
           </div>
-          </a>
           <div class="game">
             <img src="Images/miniCover/Cyberpunk2077.png" />
             <div class="info">
