--- a/Atomic_Heart.html
+++ b/Atomic_Heart.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="Styles/AH.css">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="Styles/gamepage.css">
         <title>
-            Atomic Heart
+            Resident Evil 4
         </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
     <body>
         <header>
             <div class="headercontainer">
-              <a href="main.html">
+              <a href="index.html">
                 <img
                   style="float: left"
                   src="Icons/free-icon-game-controller-1068778.png"
@@ -36,7 +37,7 @@
         <div class="intro">
             <main class="container">
                 <img src = "Images/bigCover/AtomicHeart BG.jpg" class="bodyicon"></img>
-                <h1 style="margin-left: 30px; margin-top: 5px; margin-bottom: 5px;">Atomic Heart</h1>
+                <h1 style="margin-left: 30px; margin-top: 5px; margin-bottom: 5px;">Resident Evil 4</h1>
                 <section class="gameinfo">
                     <img src = "Images/miniCover/56297_Atomic_Heart.jpg" class="gameicon"/>
                     <div class="maininfo">
