--- a/Horizon.html
+++ b/Horizon.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="Styles/gamepage.css">
         <title>
-            Resident Evil 4
+            Horizon: Forbidden West
         </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
         <div class="intro">
             <main class="container">
                 <img src = "Images/bigCover/Horizon.jpg" class="bodyicon"></img>
-                <h1 style="margin-left: 30px; margin-top: 5px; margin-bottom: 5px;">Resident Evil 4</h1>
+                <h1 style="margin-left: 30px; margin-top: 5px; margin-bottom: 5px;">Horizon: Forbidden West</h1>
                 <section class="gameinfo">
                     <img src = "Images/miniCover/Horizon.png" class="gameicon"/>
                     <div class="maininfo">
