--- a/Auth.html
+++ b/Auth.html
@@ -30,27 +30,20 @@
           style="width: 80%; height: 10%; text-align: center; margin: 0 auto"
         >
           <h1 style="color: #333333; font-size: 24px; display: inline-block">
-            Регистрация
+            Авторизация
           </h1>
         </div>
-        <div class="search">
-          <input style="padding-left: 5px" placeholder="Имя пользователя" />
-          <a class="searcha" , href=""> </a>
-        </div>
-        <div class="search">
-          <input style="padding-left: 5px" placeholder="Логин" />
-          <a class="searcha" , href=""> </a>
-        </div>
-        <div class="search">
-          <input style="padding-left: 5px" placeholder="Пароль" />
-          <a class="searcha" , href=""> </a>
-        </div>
-
-        <a href="index.html">
-          <div class="searchbutton">
-            <h1 style="color: #ffffff">Поиск</h1>
+        <div class="input_fields">
+          <div class="search">
+            <input style="padding-left: 5px" placeholder="Логин" />
+            <a class="searcha"> </a>
           </div>
-        </a>
+          <div class="search">
+            <input style="padding-left: 5px" placeholder="Пароль" />
+            <a class="searcha"> </a>
+          </div>
+        </div>
+        <a href="index.html" class="btn">Войти</a>
       </div>
     </main>
   </body>
