--- a/Reg.html
+++ b/Reg.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="Styles/Auth.css" />
+    <link rel="stylesheet" href="Styles/Reg.css" />
     <title>SSG - лучший игровой портал/</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,10 +30,14 @@
           style="width: 80%; height: 10%; text-align: center; margin: 0 auto"
         >
           <h1 style="color: #333333; font-size: 24px; display: inline-block">
-            Авторизация
+            Регистрация
           </h1>
         </div>
         <div class="input_fields">
+          <div class="search">
+            <input style="padding-left: 5px" placeholder="Имя пользователя" />
+            <a class="searcha"> </a>
+          </div>
           <div class="search">
             <input style="padding-left: 5px" placeholder="Логин" />
             <a class="searcha"> </a>
@@ -42,8 +46,12 @@
             <input type="password" style="padding-left: 5px" placeholder="Пароль" />
             <a class="searcha"> </a>
           </div>
+          <div class="search">
+            <input type="password" style="padding-left: 5px" placeholder="Повторите пароль" />
+            <a class="searcha"> </a>
+          </div>
         </div>
-        <button href="index.html" class="btn">Войти</button>
+        <button href="index.html" class="btn">Регистрация</button>
       </form>
     </main>
   </body>
