--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             </div>
           </a>
         </div>
+        <a href="Reg.html">
+          <img
+            style="float: right"
+            src="Icons/auth.png"
+            width="55"
+            height="55"
+          />
+        </a>
       </div>
     </header>
     <main class="intro">
