--- a/Auth.html
+++ b/Auth.html
@@ -34,13 +34,15 @@
           </h1>
         </div>
         <div class="input_fields">
-          <div class="search">
+          <div class="input_info">
             <input style="padding-left: 5px" placeholder="Логин" />
-            <a class="searcha"> </a>
           </div>
-          <div class="search">
-            <input type="password" style="padding-left: 5px" placeholder="Пароль" />
-            <a class="searcha"> </a>
+          <div class="input_info">
+            <input
+              type="password"
+              style="padding-left: 5px"
+              placeholder="Пароль"
+            />
           </div>
         </div>
         <button href="index.html" class="btn">Войти</button>
