--- a/Reg.html
+++ b/Reg.html
@@ -36,21 +36,17 @@
           </h1>
         </div>
         <div class="input_fields">
-          <div class="search">
+          <div class="input_info">
             <input name="Name" style="padding-left: 5px" placeholder="Имя пользователя" />
-            <a class="searcha"> </a>
           </div>
-          <div class="search">
+          <div class="input_info">
             <input name="Login" style="padding-left: 5px" placeholder="Логин" />
-            <a class="searcha"> </a>
           </div>
-          <div class="search">
+          <div class="input_info">
             <input name="Password" type="password" style="padding-left: 5px" placeholder="Пароль" />
-            <a class="searcha"> </a>
           </div>
-          <div class="search">
+          <div class="input_info">
             <input name="PasswordConfirm" type="password" style="padding-left: 5px" placeholder="Повторите пароль" />
-            <a class="searcha"> </a>
           </div>
         </div>
         <button class="btn">Регистрация</button>
