--- a/Auth.html
+++ b/Auth.html
@@ -25,7 +25,7 @@
       </div>
     </header>
     <main class="intro">
-      <form class="container">
+      <form class="container" style="max-height: 35%" >
         <div
           style="width: 80%; height: 10%; text-align: center; margin: 0 auto"
         >
@@ -33,19 +33,19 @@
             Авторизация
           </h1>
         </div>
-        <div class="input_fields">
+        <div class="input_fields" style="height: 120px">
           <div class="input_info">
-            <input style="padding-left: 5px" placeholder="Логин" />
+            <input class="input" placeholder="Логин" />
           </div>
           <div class="input_info">
             <input
+            class="input"
               type="password"
-              style="padding-left: 5px"
               placeholder="Пароль"
             />
           </div>
         </div>
-        <button href="index.html" class="btn">Войти</button>
+        <button href="index.html" class="btn" style="width: 6rem; height: 3rem; margin: 50px auto">Войти</button>
       </form>
     </main>
   </body>
