--- a/Reg.html
+++ b/Reg.html
@@ -6,7 +6,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="Styles/Reg.css" />
+    <link rel="stylesheet" href="Styles/Auth.css" />
     <title>SSG - лучший игровой портал/</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,27 +29,27 @@
       </div>
     </header>
     <main class="intro">
-      <form class="container" action="vendor/signup.php" method="post">
+      <form class="container" style="max-height: 50%" action="vendor/signup.php" method="post">
         <div style="width: 80%; height: 10%; text-align: center; margin: 0 auto">
           <h1 style="color: #333333; font-size: 24px; display: inline-block">
             Регистрация
           </h1>
         </div>
-        <div class="input_fields">
+        <div class="input_fields"style="height: 100px">
           <div class="input_info">
-            <input name="Name" style="padding-left: 5px" placeholder="Имя пользователя" />
+            <input class="input" name="Name" placeholder="Имя пользователя" />
           </div>
           <div class="input_info">
-            <input name="Login" style="padding-left: 5px" placeholder="Логин" />
+            <input class="input" name="Login" placeholder="Логин" />
           </div>
           <div class="input_info">
-            <input name="Password" type="password" style="padding-left: 5px" placeholder="Пароль" />
+            <input class="input" name="Password" type="password" placeholder="Пароль" />
           </div>
           <div class="input_info">
-            <input name="PasswordConfirm" type="password" style="padding-left: 5px" placeholder="Повторите пароль" />
+            <input class="input" name="PasswordConfirm" type="password" placeholder="Повторите пароль" />
           </div>
         </div>
-        <button class="btn">Регистрация</button>
+        <button class="btn" style="width: 12rem; height: 4rem; margin: 185px auto">Регистрация</button>
         <?php
             if($_SESSION['message']){
                 echo '<p>' . $_SESSION['message'] . '</p>';
