--- a/Atomic_Heart.html
+++ b/Atomic_Heart.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <div class="headercontainer">
-              <a href="index.html">
+              <a href="index.php">
                 <img
                   style="float: left"
                   src="Icons/free-icon-game-controller-1068778.png"
@@ -31,7 +31,15 @@
                     <h1 style="color: #ffffff">Поиск</h1>
                   </div>
                 </a>
-              </div>
+                </div>
+                <a class="auth" href="Reg.php">
+                    <img
+                      style="float: left"
+                      src="Icons/auth.png"
+                      width="70"
+                      height="70"
+                    />
+                </a>
             </div>
           </header>
         <div class="intro">
