--- a/Atomic_Heart.html
+++ b/Atomic_Heart.html
@@ -34,10 +34,10 @@
                 </div>
                 <a class="auth" href="Reg.php">
                     <img
-                      style="float: left"
+                      style="float: right"
                       src="Icons/auth.png"
-                      width="70"
-                      height="70"
+                      width="55"
+                      height="55"
                     />
                 </a>
             </div>
